# DataVoyageManual

./: .gitignore  README.md  pyproject.toml
data/: cities.yaml  narrative_samples.txt
docs/: usage.md
notes/: story.md
scripts/: __init__.py  atlas_cli.py  export_markdown.py
src/nightroute/: __init__.py  atlas.py
tests/: test_atlas.py
